--- a/css/style.css
+++ b/css/style.css
@@ -146,14 +146,12 @@ img{max-width:100%; border:0 none; height:auto; display:inline-block;}
 	.identityWorth h2{background:url(../images/babal.png) no-repeat; width:218px; height:147px; float:left; margin:0 40px 20px 0;}
 	.identityWorth h2 span{font-size:24px; color:#fff; text-align:center; padding:35px 15px; display:block;}
 	.identityWorth p{text-align:center; font-size:22px; padding:25px 0;}
-	.categotys{border-top:1px solid #c3c3c3;}
-	.categotys{}
+	.categotys{border-top:2px solid #c3c3c3;}
 	.catBlock{width:50%; float:left;}
-	/*.catBlock{width:31.75%; float:left;}*/
 	.catBlock2{width:36.5%; }
 	.catBlock .cat{padding-right:28px; padding-left:28px; padding-bottom:50px;}
-	.catBlock .catFt{padding-left:28px; border-left :1px solid #c3c3c3;}
-	.catBlock .catSd{border-right:1px solid #c3c3c3; border-left:1px solid #c3c3c3;}
+	.catBlock .catFt{padding-left:28px; border-left :2px solid #c3c3c3; border-bottom :2px solid #c3c3c3;}
+	.catBlock .catSd{border-right: 2px solid #c3c3c3; border-bottom: 2px solid #c3c3c3; border-left: 2px solid #c3c3c3;}
 	.catBlock .catTd{padding-right:0;}
 	.catBlock .cat h3{font-size:24px; color:#0066cb; padding:25px 0;}
 	.catBlock .cat h3 sup{font-size:14px;position:relative;bottom:10px;}
@@ -540,4 +538,27 @@ box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;transition: border 0.2s linear 
     font-size: 1.25em;
     font-family: Arial;
     font-weight: bold; color: #000;
+}
+
+#homepageContainer{
+margin: 20px auto;
+}
+
+#faqContainer{
+	margin: 20px auto;
+}
+#productContainer{
+	margin: 20px auto;
+}
+#freeTrialContainer{
+	margin: 20px auto;
+}
+
+#gatekeeperProductDescription{
+	font-size: 1.2em;
+}
+
+#twoFAProductDescription{
+	height: 424px;
+	font-size: 1.2em;
 }
