--- a/css/new-age.css
+++ b/css/new-age.css
@@ -432,9 +432,6 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-    /*background: #fdcc52;*/
-    /*background: -webkit-linear-gradient(#fdcc52, #fdc539);*/
-    /*background: linear-gradient(#fdcc52, #fdc539); */
     background: #027cde;
     background: -webkit-linear-gradient(#027cde, #026ac1);
     background: linear-gradient(#027cde, #026ac1);
@@ -450,26 +447,23 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .btn-outline {
-    /*color: white;*/
-    /*border: 1px solid;*/
-    /*border-color: white;  */
-
-    background-color: #027cde;
     color: white;
-    border: #027cde 1px solid;
+    border: #0296f8 1px solid;
+    background: #027cde; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#99d1fa, #027cde); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#99d1fa, #027cde); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#99d1fa, #027cde); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#99d1fa, #027cde); /* Standard syntax */
 }
 
 .btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
-    /*color: white;*/
-    /*border-color: #fdcc52;*/
-    /*background-color: #fdcc52;  */
-    /*color: white;*/
-    /*border-color: #027cde;*/
-    /*background-color: #027cde;*/
-
-    color: #027cde;
+    color: white;
     border-color: #027cde;
-    background-color: white;
+    background: #027cde; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#92c7ee, #0262c3); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#92c7ee, #0262c3); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#92c7ee, #0262c3); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#92c7ee, #0262c3); /* Standard syntax */
 }
 
 .btn {
