--- a/css/takodaCSS.css
+++ b/css/takodaCSS.css
@@ -35,6 +35,148 @@
     background: linear-gradient(#92c7ee, #0262c3); /* Standard syntax */
 }
 
-.btn:not([disabled]):not(.disabled).active, .btn:not([disabled]):not(.disabled):active{
-    background-image: linear-gradient(#92c7ee, #0262c3);
+#btnJumbotron{
+    color: white;
+    border: #0296f8 1px solid;
+    background: #027cde; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#99d1fa, #027cde); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#99d1fa, #027cde); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#99d1fa, #027cde); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#99d1fa, #027cde); /* Standard syntax */
+}
+
+#btnJumbotron:hover, #btnJumbotron:focus, #btnJumbotron:active {
+    color: white;
+    border-color: #027cde;
+    background: #027cde; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#92c7ee, #0262c3); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#92c7ee, #0262c3); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#92c7ee, #0262c3); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#92c7ee, #0262c3); /* Standard syntax */
+}
+
+
+.close:hover{
+    cursor: pointer;
+    color: black;
+}
+
+.modal-title{
+    font-weight: 400;
+}
+
+.btn:hover{
+    cursor: pointer;
+}
+
+.btn-danger:active{
+    background-image: transparent;
+    background-color: #c82333;
+    border-color: #bd2130;
+}
+
+
+.masthead{
+    background: #F2F2F2;
+    background: -webkit-linear-gradient(to top, #EAEAEA, #DBDBDB, #F2F2F2, #ffffff);
+    background: linear-gradient(to top, #EAEAEA, #DBDBDB, #F2F2F2, #ffffff);
+}
+
+#features{
+    padding: 40px 0 10%;
+}
+
+section.features .section-heading{
+    margin-bottom: 0;
+}
+
+#howTo{
+    padding: 40px 0;
+}
+
+
+.termofuse{padding:0px 0 30px 0;}
+.termofuse h2{color:#0066cb;font-size:22px;font-weight:inherit;}
+.termofuse p{font-size:16px; color:#666;line-height:normal;padding:0 0 20px 0; margin: 0}
+.termofuse .intent{text-indent:0px;margin:0 0 0 5%;}
+.termofuse .intent1{text-indent:0px;margin:0 0 0 10%;}
+
+
+.privacypolicy{padding:0px 0 30px 0;}
+.privacypolicy h2{color:#027cde;font-size:22px; font-weight: 600}
+.privacypolicy p{font-size:16px; color:#666;line-height:normal;padding:0 0 20px 0;}
+
+@media (min-width: 20px){
+    .masthead>.container {
+         max-width: 100%; 
+    }
+    header.masthead {
+        padding-top: 0;
+    }
+     #homepageVideo{
+        margin-top: -7rem!important;
+    }
+}
+@media (min-width: 576px){
+    .masthead>.container {
+         max-width: 100%; 
+    }
+    header.masthead {
+        padding-top: 0;
+    }
+     #homepageVideo{
+        margin-top: -4rem!important; 
+    }
+}
+@media (min-width: 768px){
+    .masthead>.container {
+         max-width: 100%; 
+    }
+    header.masthead {
+        padding-top: 0;
+    }
+    #homepageVideo{
+        margin-top: -2rem!important;
+    }
+}
+
+
+@media (min-width: 992px){
+    .masthead>.container{
+         max-width: 100%; 
+    }
+    #homepageVideo{
+        margin-top: 1rem!important; margin-bottom: 1em
+    }
+}
+
+@media (min-width: 1200px){
+    .masthead>.container {
+         max-width: 100%; 
+    }
+    #homepageVideo{
+        margin-top: 5rem!important; margin-bottom: 1em
+    }
+}
+
+.featuresItem:hover {
+    transform: scale(1.1);
+}
+
+.featuresItem {
+    transition: all .2s ease-in-out;
+}
+
+#btnHelp{
+  font-size: 1.25em;
+  color: rgba(160, 160, 160, 0.88);
+  padding: 5px 0 0 10px;
+   }
+#btnHelp:hover{
+  color: black;
+  cursor: pointer;
+}
+#mainNav .navbar-toggler{
+    color: white;
+    background: #027cde;
 }
